# svg_icons

./: README.md  organize.py  pyproject.toml
src/svg_icons/: paths.py
